--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^5.2.0",
+    "@bull-board/express": "^5.2.0",
+    "@bull-board/ui": "^5.2.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.1.0",
+    "bullmq": "^3.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
